# depo_final

./: .env.example  .gitignore  README.md  eslint.config.js  main.py  pyproject.toml  requirements.txt
backend/: app.py  config.py  requirements.txt
backend/api/: __init__.py
backend/database/: __init__.py  connection.py  init_db.py  schema.sql
desktop/: launcher.py
docs/: architecture.md  development_workflow.md  phase_a_complete.md  ufm_schema_v1.md
frontend/: index.html
scripts/: cleanup_python.bat  verify_project.bat  verify_project_runtime.py
tests/: _fake_dom.js  legal_review_fixture.py  test_audit_logging.py  test_case_repo.py  test_colloquy_formatting.py  test_confidence_mapping.py  test_db_init.py  test_deepgram_request.py  test_deterministic_rules.py  test_diagnostics_api.py  test_docx_export.py  test_dynamic_rendering.py  test_entity_extraction.py  test_exhibit_linking.py  test_export_manifest.py  test_interpreted_segments.py  test_keyterm_generation.py  test_keyterm_rendering.py  test_legal_navigation.py  test_live_buffer.py  test_nod_parser.py  test_objection_workflow.py  test_panel_state.py  test_performance_metrics.py  test_playback_sync.py  test_preprocessing.py  test_qa_formatting.py  test_realtime_persistence.py  test_recovery_systems.py  test_review_queue.py  test_session_repo.py  test_speaker_corrections.py  test_speaker_labels.py  test_stage_navigation.py  test_system_health.py  test_timeline_queries.py  test_transcript_integrity.py  test_transcript_navigation.py  test_transcript_persistence.py  test_transcript_repo.py  (+5 more)
ui/: index.html
(+155 files in other folders)
