[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"

[project]
name = "depo-pro"
version = "0.1.0"
description = "Foundation architecture for the DEPO-PRO desktop application."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "numpy>=2.3,<3.0",
    "onnxruntime>=1.22,<2.0",
    "pydantic>=2.9,<3.0",
    "pypdf>=6.11,<7.0",
    "python-dotenv>=1.0,<2.0",
    "pywebview>=5.4,<6.0",
    "silero-vad>=6.0,<7.0",
    "soundfile>=0.13,<1.0",
    "torch>=2.8,<3.0",
    "torchaudio>=2.8,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]
